# driftsense-ml-observability

./: Dockerfile  README.md  pyproject.toml
driftsense/: sdk.py
driftsense/alerts/: slack.py
driftsense/analyzers/: psi.py
driftsense/collectors/: latency.py
helm/: Chart.yaml  values.yaml
services/reporter/: app.py
tests/: sdk_test.py
